Fix notification name wrapping in Witches theme

--- a/app/javascript/skins/glitch/witches/fixes.scss
+++ b/app/javascript/skins/glitch/witches/fixes.scss
@@ -5,3 +5,7 @@
 .status__avatar {
     position: unset;
 }
+.status__info .status__display-name
+    display: unset;
+    padding-right: 0px;
+}
